implementing Articles in the WebView

--- a/app/src/main/res/navigation/news_nav_graph.xml
+++ b/app/src/main/res/navigation/news_nav_graph.xml
@@ -42,5 +42,9 @@
     <fragment
         android:id="@+id/articleFragment"
         android:name="guilhermekunz.com.br.newsapp.ui.fragments.ArticleFragment"
-        android:label="ArticleFragment" />
+        android:label="ArticleFragment" >
+        <argument
+            android:name="article"
+            app:argType="guilhermekunz.com.br.newsapp.models.Article" />
+    </fragment>
 </navigation>
