--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -3,11 +3,11 @@
 
     <item
         android:id="@+id/Item1"
-        android:title="Item 1" />
+        android:title="Camera" />
 
     <item
         android:id="@+id/Item2"
-        android:title="Item 2" />
+        android:title="Gallery" />
 
     <item
         android:id="@+id/Item3"
