--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -111,10 +111,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:textSize="16sp"
         android:textColor="@color/black"
+        android:textSize="16sp"
         android:text="Password"
+        app:layout_constraintBottom_toTopOf="@+id/passwordRegister"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="379dp" />
+        app:layout_constraintTop_toBottomOf="@+id/emailRegister" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
