--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -8,7 +8,7 @@
     >
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profile_image"
+        android:id="@+id/civProfileImage"
         android:layout_width="190dp"
         android:layout_height="155dp"
         android:layout_centerInParent="true"
