--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,17 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="190dp"
+    android:layout_height="170dp"
     android:background="@color/colorPrimary"
     >
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/civProfileImage"
-        android:layout_width="190dp"
-        android:layout_height="155dp"
-        android:layout_centerInParent="true"
-        android:src="@drawable/profile_image" />
+        android:id="@+id/civProfileImageHeader"
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/profile_image"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/tvUserNameHeader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="User Name"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/civProfileImageHeader"
+        app:layout_constraintTop_toBottomOf="@+id/civProfileImageHeader" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
